feat: Integrate Supabase for form submissions
Replaces direct Google Sheets submission with Supabase. This change introduces Supabase client to handle form data persistence and updates key mappings for form payloads to align with backend expectations.

Adds a new chatbot component and updates the application's favicon and logo to the new "Circuit Apricot" design.

Also refactors form submission logic to prepare for backend API integration and adjusts contact and quote page content for clarity and accuracy.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>APRICODI | Malatya’dan Dünyaya Dijital Ürünler</title>
     <meta name="description" content="Kurumsal web yazılım, mobil uygulama, UI/UX tasarım ve e-ticaret çözümleri." />
+    
+    <!-- New Circuit Apricot Favicon -->
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='100' y2='100'%3E%3Cstop stop-color='%23fb923c'/%3E%3Cstop offset='1' stop-color='%23ea580c'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M50 32C35 15 35 5 50 5C65 5 65 15 50 32' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M42 32C20 32 10 50 10 65C10 85 30 95 48 95' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M58 32C80 32 90 50 90 65C90 85 70 95 52 95' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M33 60L26 65L33 70M67 60L74 65L67 70M43 72L57 58' stroke='%23334155' stroke-width='5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='48' cy='95' r='4' fill='%23ea580c'/%3E%3Ccircle cx='52' cy='95' r='4' fill='%23ea580c'/%3E%3Ccircle cx='50' cy='5' r='4' fill='%23fb923c'/%3E%3C/svg%3E">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -72,7 +76,9 @@
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1"
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.10.1",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
   }
 }
 </script>
