feat: Enhance SEO and meta tags
Improve search engine visibility and social media sharing by adding comprehensive SEO meta tags and updating existing page titles and descriptions. This includes adding keywords, canonical URLs, author information, and Open Graph tags.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>APRICODI | Kurumsal Yazılım ve Tasarım</title>
-    <meta name="description" content="Kurumsal web yazılım, mobil uygulama, UI/UX tasarım ve e-ticaret çözümleri." />
+    <title>APRICODI | Kurumsal Yazılım, Mobil Uygulama ve Web Tasarım</title>
+    <meta name="description" content="APRICODI: Kurumsal web yazılımı, iOS/Android mobil uygulama geliştirme ve profesyonel UI/UX tasarım çözümleri sunan dijital ajans." />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="APRICODI" />
+    <link rel="canonical" href="https://apricodi.com/" />
     
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='100' y2='100'%3E%3Cstop stop-color='%23fb923c'/%3E%3Cstop offset='1' stop-color='%23ea580c'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M50 32C35 15 35 5 50 5C65 5 65 15 50 32' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M42 32C20 32 10 50 10 65C10 85 30 95 48 95' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M58 32C80 32 90 50 90 65C90 85 70 95 52 95' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M33 60L26 65L33 70M67 60L74 65L67 70M43 72L57 58' stroke='%23334155' stroke-width='5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='48' cy='95' r='4' fill='%23ea580c'/%3E%3Ccircle cx='52' cy='95' r='4' fill='%23ea580c'/%3E%3Ccircle cx='50' cy='5' r='4' fill='%23fb923c'/%3E%3C/svg%3E">
     
@@ -35,6 +38,57 @@
       ::-webkit-scrollbar-thumb { background: #fb923c; border-radius: 4px; }
       ::-webkit-scrollbar-thumb:hover { background: #ea580c; }
     </style>
+
+    <!-- Structured Data (JSON-LD) for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareCompany",
+      "name": "APRICODI Yazılım",
+      "description": "Kurumsal web yazılımı, mobil uygulama geliştirme ve dijital dönüşüm çözümleri sunan yazılım ajansı.",
+      "url": "https://apricodi.com",
+      "logo": "https://apricodi.com/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Malatya",
+        "addressCountry": "TR"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+90-850-000-00-00",
+        "contactType": "customer service",
+        "email": "info@apricodi.com"
+      },
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Yazılım ve Tasarım Hizmetleri",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Kurumsal Web Yazılım"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "Mobil Uygulama Geliştirme (iOS & Android)"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "UI/UX Tasarım"
+            }
+          }
+        ]
+      }
+    }
+    </script>
+
     <script type="importmap">
     {
       "imports": {
@@ -53,7 +107,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Entry point added to prevent white screen -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
