--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://apricodi.com/" />
     <meta property="og:title" content="Apricodi Malatya | Web, Yapay Zeka ve Dijital Çözümler" />
     <meta property="og:description" content="Malatya merkezli Apricodi; web geliştirme, yapay zeka ve dijital dönüşüm projeleriyle işletmelere modern çözümler sunar." />
-    <meta property="og:image" content="https://apricodi.com/og-image.jpg" />
+    <meta property="og:image" content="https://uuiwyrjzbagvwoobbuor.supabase.co/storage/v1/object/public/apricody/apricodilogo.png" />
     <meta property="og:locale" content="tr_TR" />
 
     <!-- Twitter -->
@@ -27,9 +27,9 @@
     <meta property="twitter:url" content="https://apricodi.com/" />
     <meta property="twitter:title" content="Apricodi Malatya | Web ve Dijital Dönüşüm Ajansı" />
     <meta property="twitter:description" content="Malatya merkezli yazılım ajansı Apricodi, web, yapay zeka ve dijital çözümler sunar. Apricody ve Apricode olarak da bilinir." />
-    <meta property="twitter:image" content="https://apricodi.com/og-image.jpg" />
+    <meta property="twitter:image" content="https://uuiwyrjzbagvwoobbuor.supabase.co/storage/v1/object/public/apricody/apricodilogo.png" />
 
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='100' y2='100'%3E%3Cstop stop-color='%23fb923c'/%3E%3Cstop offset='1' stop-color='%23ea580c'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath d='M50 32C35 15 35 5 50 5C65 5 65 15 50 32' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M42 32C20 32 10 50 10 65C10 85 30 95 48 95' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M58 32C80 32 90 50 90 65C90 85 70 95 52 95' stroke='url(%23g)' stroke-width='6' stroke-linecap='round'/%3E%3Cpath d='M33 60L26 65L33 70M67 60L74 65L67 70M43 72L57 58' stroke='%23334155' stroke-width='5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Ccircle cx='48' cy='95' r='4' fill='%23ea580c'/%3E%3Ccircle cx='52' cy='95' r='4' fill='%23ea580c'/%3E%3Ccircle cx='50' cy='5' r='4' fill='%23fb923c'/%3E%3C/svg%3E">
+    <link rel="icon" href="https://uuiwyrjzbagvwoobbuor.supabase.co/storage/v1/object/public/apricody/apricodilogo.png" type="image/png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,7 +68,7 @@
       "alternateName": ["Apricody", "Apricode"],
       "description": "Apricodi, Malatya merkezli bir yazılım şirketidir. Web geliştirme, yapay zeka, otomasyon, e-ticaret, UI/UX tasarım ve mobil uygulama geliştirme hizmetleri sunar.",
       "url": "https://apricodi.com",
-      "logo": "https://apricodi.com/logo.png",
+      "logo": "https://uuiwyrjzbagvwoobbuor.supabase.co/storage/v1/object/public/apricody/apricodilogo.png",
       "sameAs": [
         "https://www.linkedin.com/company/apricodi",
         "https://instagram.com/apricodi"
