--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Outfit:wght@700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Outfit:wght@700;800;900&family=Lora:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -46,7 +46,8 @@
           extend: {
             fontFamily: { 
               sans: ['Inter', 'sans-serif'],
-              brand: ['Outfit', 'sans-serif']
+              brand: ['Outfit', 'sans-serif'],
+              serif: ['Lora', 'serif']
             },
             colors: {
               brand: {
@@ -66,6 +67,14 @@
       ::-webkit-scrollbar-track { background: #f1f1f1; }
       ::-webkit-scrollbar-thumb { background: #fb923c; border-radius: 4px; }
       ::-webkit-scrollbar-thumb:hover { background: #ea580c; }
+      
+      /* Medium style content adjustments */
+      .blog-content p {
+        font-family: 'Lora', serif;
+      }
+      .blog-content blockquote p {
+        font-family: 'Inter', sans-serif !important;
+      }
     </style>
 
     <!-- Structured Data (JSON-LD) for SEO -->
